--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,6 @@ dependencies:
   http: 1.2.2
   intl: 0.19.0
   json_path: 0.7.2
-  mask_text_input_formatter: 2.9.0
   mime_type: 1.0.0
   page_transition: 2.1.0
   path_provider: 2.1.4
@@ -70,8 +69,10 @@ dependencies:
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
   path_provider_windows: 2.3.0
+  pdf: ^3.10.4
   photo_view: 0.15.0
   plugin_platform_interface: 2.1.8
+  printing: ^5.9.3
   provider: 6.1.2
   rxdart: 0.27.7
   shared_preferences: 2.3.2
