--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   auto_size_text: 3.0.0
+  awesome_notifications: ^0.8.0
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
@@ -76,7 +77,9 @@ dependencies:
   image_picker_windows: 0.2.1+1
   intl: 0.19.0
   json_path: 0.7.2
+  mailer: ^6.0.1
   mime_type: 1.0.0
+  open_file: ^3.3.2
   page_transition: 2.1.0
   path_provider: 2.1.4
   path_provider_android: 2.2.10
@@ -87,9 +90,9 @@ dependencies:
   pdf: ^3.10.4
   photo_view: 0.15.0
   plugin_platform_interface: 2.1.8
-  printing: ^5.9.3
   provider: 6.1.2
   rxdart: 0.27.7
+  share_plus: ^10.0.2
   shared_preferences: 2.3.2
   shared_preferences_android: 2.3.2
   shared_preferences_foundation: 2.5.2
@@ -105,6 +108,7 @@ dependencies:
   stream_transform: 2.1.0
   styled_divider: 1.0.4
   timeago: 3.6.1
+  timezone: ^0.9.2
   url_launcher: 6.3.0
   url_launcher_android: 6.3.10
   url_launcher_ios: 6.3.1
@@ -125,6 +129,7 @@ dependencies:
 
 dependency_overrides:
   http: 1.2.2
+  intl: 0.19.0
   uuid: ^4.0.0
   win32: 5.5.1
 
@@ -143,7 +148,7 @@ flutter_launcher_icons:
   web:
     generate: true
   image_path: 'assets/images/app_launcher_icon.jpeg'
-  adaptive_icon_background: '#ffffff'
+  adaptive_icon_background: '#00000000'
   adaptive_icon_foreground: 'assets/images/adaptive_foreground_icon.jpeg'
 
 
